--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Kviz – glagoljska riječ mjeseca</title>
     <meta charset="utf-8">
-    <meta name="description" content="KViz crpi riječi iz »Rječnika crkvenoslavenskoga jezika hrvatske redakcije«, jednoga od temeljnih projekata Staroslavenskoga instituta, te iz građe koja je priređena za njegovu izradu (preko 60 hrvatskoglagoljskih izvora iz razdoblja od 11./12. do 17. st.).">
+    <meta name="description" content="Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!">
     <meta name="keywords" content="kviz, LZMK, Leksikografski zavod Miroslav Krleža, enciklopedije, leksikoni">
     <meta name="author" content="LZMK">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="Kviz – glagoljska riječ mjeseca" />
-    <meta property="og:description" content="Kviz crpi riječi iz »Rječnika crkvenoslavenskoga jezika hrvatske redakcije«, jednoga od temeljnih projekata Staroslavenskoga instituta, te iz građe koja je priređena za njegovu izradu (preko 60 hrvatskoglagoljskih izvora iz razdoblja od 11./12. do 17. st.)." />
+    <meta property="og:description" content="Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!" />
     <meta property="og:image" content="og-slika.png" />
 </head>
 
@@ -40,7 +40,7 @@
                         <h2 class="winner" style="text-transform: uppercase; font-size:2rem">KVIZ – glagoljska riječ mjeseca</h2>
                         <br>
                         <hr class="style-two">
-                        <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;"><br>Kviz crpi riječi iz »Rječnika crkvenoslavenskoga jezika hrvatske redakcije«, jednoga od temeljnih projekata Staroslavenskoga instituta, te iz građe koja je priređena za njegovu izradu (preko 60 hrvatskoglagoljskih izvora iz razdoblja od 11./12. do 17. st.).</p>
+                        <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;"><br>Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!</p>
                         <br>
                         <button class="init-page__btn btn uglata gla" onClick="set_pitanja=1;">igraj</button>
                         <br>
@@ -85,6 +85,7 @@
                     odgovora i vrijeme ostvaren je idući broj
                     bodova:</p>
                 <h3 class="results-page__bodovi">postavljenih pitanja!</h3>
+                <p>Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!</p>
                 <br>
                 <p>
 
