--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -15,6 +15,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://use.fontawesome.com/2d5bc62cc3.js"></script>
     <script src='js/jquery.min.js'></script>
     <script src="js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="css/sweetalert2.min.css">
@@ -78,14 +79,14 @@
                 transform: translateY(-50%);">
                 <h3 class="results-page__info2">Hvala na sudjelovanju u
                     kvizu!</h3><br>
-                <p class="results-page__info">postotak točnih odgovora: <span class="results-page__score">100 %</span>
+                <p class="results-page__info">postotak točnih odgovora: <span class="results-page__score"></span>
                 </p>
                 <br>
                 <p class="results-page__info">s obzirom na količinu točnih
                     odgovora i vrijeme ostvaren je idući broj
                     bodova:</p>
-                <h3 class="results-page__bodovi">postavljenih pitanja!</h3>
-                <p>Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!</p>
+                <h3 class="results-page__bodovi"></h3>
+                <p class="results-page__info">Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!<br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></p>
                 <br>
                 <p>
 
