--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <script src="https://use.fontawesome.com/2d5bc62cc3.js"></script>
+    <script src="https://kit.fontawesome.com/9b2be0a113.js" crossorigin="anonymous"></script>
     <script src='js/jquery.min.js'></script>
     <script src="js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="css/sweetalert2.min.css">
@@ -41,7 +41,7 @@
                         <h2 class="winner" style="text-transform: uppercase; font-size:2rem">KVIZ – glagoljska riječ mjeseca</h2>
                         <br>
                         <hr class="style-two">
-                        <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;"><br>Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!</p>
+                        <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;"><br>Na stranici Staroslavenskoga instituta na <a href="https://www.facebook.com/stin.hr" target="_blank">Facebooku</a> svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!</p>
                         <br>
                         <button class="init-page__btn btn uglata gla" onClick="set_pitanja=1;">igraj</button>
                         <br>
@@ -79,14 +79,12 @@
                 transform: translateY(-50%);">
                 <h3 class="results-page__info2">Hvala na sudjelovanju u
                     kvizu!</h3><br>
-                <p class="results-page__info">postotak točnih odgovora: <span class="results-page__score"></span>
+                <p class="results-page__info">Postotak točnih odgovora: <span class="results-page__score"></span>
                 </p>
                 <br>
-                <p class="results-page__info">s obzirom na količinu točnih
-                    odgovora i vrijeme ostvaren je idući broj
-                    bodova:</p>
+                <p class="results-page__info">Stavi s obzirom na broj točnih odgovora i vrijeme ostvaren je sljedeći broj bodova:</p>
                 <h3 class="results-page__bodovi"></h3>
-                <p class="results-page__info">Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!<br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></p>
+                <p class="results-page__info">Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!<br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fab fa-facebook-square"></i></a></p>
                 <br>
                 <p>
 
