--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -82,7 +82,7 @@
                 <p class="results-page__info">Postotak točnih odgovora: <span class="results-page__score"></span>
                 </p>
                 <br>
-                <p class="results-page__info">Stavi s obzirom na broj točnih odgovora i vrijeme ostvaren je sljedeći broj bodova:</p>
+                <p class="results-page__info">S obzirom na broj točnih odgovora i vrijeme ostvaren je sljedeći broj bodova:</p>
                 <h3 class="results-page__bodovi"></h3>
                 <p class="results-page__info">Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!<br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fab fa-facebook-square"></i></a></p>
                 <br>
