--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -45,7 +45,7 @@
                         <br>
                         <button class="init-page__btn btn uglata gla" onClick="set_pitanja=1;">igraj</button>
                         <br>
-                        <p style="text-align: center;">Igra napravljena u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
+                        <p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
                     </div>
                 </div>
             </div>
