--- a/kviz-rijec-mjeseca/index.html
+++ b/kviz-rijec-mjeseca/index.html
@@ -44,10 +44,10 @@
                         <div id="uvod"><p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;"><br>Na stranici Staroslavenskoga instituta na <a href="https://www.facebook.com/stin.hr" target="_blank">Facebooku</a> svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!</p>
                         <br>
                         <button class="btn uglata gla" onclick="document.getElementById('uvod').style.display = 'none';document.getElementById('razina').style.display = 'block'">igraj</button></div>
-                        <div id="razina" style="display: none;"> <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;">Odaberi težinu:</p>
-                        <button class="init-page__btn btn uglata gla" onclick="set_pitanja=1">lako</button>
-                        <button class="init-page__btn btn uglata gla" onclick="set_pitanja=2">srednje</button>
-                        <button class="init-page__btn btn uglata gla" onclick="set_pitanja=3">teško</button></div>
+                        <div id="razina" style="display: none;"> <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;text-align: center;">Odaberi razinu:</p>
+                        <button class="init-page__btn btn uglata" onclick="set_pitanja=1">I. razina</button>
+                        <button class="init-page__btn btn uglata" onclick="set_pitanja=2">II. razina</button>
+                        <button class="init-page__btn btn uglata" onclick="set_pitanja=3">III. razina</button></div>
 
                         <br>
                         <p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
