--- a/brojevi/index.html
+++ b/brojevi/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nauči antonime</title>
+    <title>Napiši broj za zadano glagoljično slovo</title>
     <meta charset="utf-8">
-    <meta name="description" content="Napiši anatonim za zadanu riječ.">
-    <meta name="author" content="Josip Mihaljević, Maja Matijević">
+    <meta name="description" content="Napiši broj za zadano glagoljično slovo">
+    <meta name="author" content="Josip Mihaljević">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Flamenco|Asap:400,700' rel='stylesheet' type='text/css'>
@@ -33,8 +33,8 @@
     <script src='js/jquery.min.js'></script>
     <script src="js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="css/sweetalert2.min.css">
-    <meta property="og:title" content="Nauči antonime" />
-    <meta property="og:description" content="Napiši antonim za zadanu riječ." />
+    <meta property="og:title" content="Napiši broj za zadano glagoljično slovo" />
+    <meta property="og:description" content="Napiši broj za zadano glagoljično slovo" />
     <meta property="og:image" content="og-slika.jpg" />
 </head>
 
@@ -136,14 +136,6 @@
 </form>
                 </form>
                 <button class="btn" onclick="location.reload()">nova igra</button>
-                <script>
-                    var p1 = [];
-                    $.get('js/antonimi.txt', function(data) {
-                        p1 = data.split("\r\n");
-                    }, 'text');
-                </script>
-                <script src="js/emoji.js" charset="utf-8"></script>
-                <script src="js/jquery.form.js"></script>
                 <script src="js/index.js"></script>
                 <script>
                    $('#bootstrapForm').submit(function (event) {
