--- a/brojevi/index.html
+++ b/brojevi/index.html
@@ -52,14 +52,22 @@
 
     <div class="init-page">
         <div class="container container2">
-            <h1 class="init-page__title">Napiši antonim za zadanu riječ</h1>
-            <p id="opis">odaberi broj pitanja</p><br>
+            <h1 class="init-page__title">Prevedi broj s glagoljice</h1>
+            <p id="opis">odaberi mogući raspon brojeva za igru</p><br>
             <!--<img src="slike/uvodna.png" style="width: 100%; margin-left: auto; display: block; margin-right: auto; margin-top:20px" />-->
-            <button class="btn broj" id="20pitanja">20 pitanja</button>
-            <button class="btn broj" id="50pitanja">50 pitanja</button>
-            <button class="btn broj" id="100pitanja">100 pitanja</button>
+            
+            <button class="btn raspon" id="1-10">1-10</button>
+            <button class="btn raspon" id="1-100">1-100</button>
+            <button class="btn raspon" id="1-1000">1-1000</button>
+            <button class="btn raspon" id="1-5000">1-5000</button>
+            <button class="btn raspon" id="100-1000">100-1000</button>
+            <button class="btn raspon" id="100-5000">100-5000</button>
+            <button class="btn raspon" id="1000-5000">1000-5000</button>
 
-
+            <button class="btn broj" id="10pitanja" style="display:none">10 pitanja</button>
+            <button class="btn broj" id="20pitanja" style="display:none">20 pitanja</button>
+            <button class="btn broj" id="50pitanja" style="display:none">50 pitanja</button>
+            <button class="btn broj" id="100pitanja" style="display:none">100 pitanja</button>
             <button class="init-page__btn btn" id="bez" style="display:none">igra bez vremenskoga ograničenja</button>
             <button class="init-page__btn btn" id="20" style="display:none">20 sekunda po pitanju</button>
 
