--- a/brojevi/index.html
+++ b/brojevi/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Prepoznaj broj napisan glagoljicom</title>
     <meta charset="utf-8">
-    <meta name="description" content="Igra u kojoj dobijete nasumično stvoren broj u odabranom rasponu koji je napisan na glagoljici. Trebate prpoznati o kojem se broju radi. Ova igra izrađena je u sklopu projekta DigiSTIN.">
+    <meta name="description" content="Igra u kojoj se igraču prikazuje nasumičan broj u odabranome rasponu brojeva napisan glagoljičnim slovima. Igrač treba prepoznati o kojemu je broju riječ. Ova igra izrađena je u sklopu projekta DigiSTIN.">
     <meta name="author" content="Josip Mihaljević">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="Prepoznaj broj napisan glagoljicom" />
-    <meta property="og:description" content="Igra u kojoj dobijete nasumično stvoren broj u odabranom rasponu koji je napisan na glagoljici. Trebate prpoznati o kojem se broju radi. Ova igra izrađena je u sklopu projekta DigiSTIN." />
+    <meta property="og:description" content="Igra u kojoj se igraču prikazuje nasumičan broj u odabranome rasponu brojeva napisan glagoljičnim slovima. Igrač treba prepoznati o kojemu je broju riječ. Ova igra izrađena je u sklopu projekta DigiSTIN." />
     <meta property="og:image" content="og-slika.jpg" />
 </head>
 <body>
@@ -48,7 +48,8 @@
             <button class="btn broj" id="50pitanja" style="display:none">50 pitanja</button>
             <button class="btn broj" id="100pitanja" style="display:none">100 pitanja</button>
             <button class="init-page__btn btn" id="bez" style="display:none">igra bez vremenskoga ograničenja</button>
-            <button class="init-page__btn btn" id="20" style="display:none">20 sekunda po pitanju</button>
+            <button class="init-page__btn btn" id="20" style="display:none">20 sekunda po pitanju</button><br>
+            <p>Ova igra izrađena je u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
         </div>
     </div>
     <div class="questions-page ">
