--- a/brojevi/index.html
+++ b/brojevi/index.html
@@ -23,6 +23,13 @@
     <meta property="og:title" content="Prepoznaj broj napisan glagoljicom" />
     <meta property="og:description" content="Igra u kojoj se igraču prikazuje nasumičan broj u odabranome rasponu brojeva napisan glagoljičnim slovima. Igrač treba prepoznati o kojemu je broju riječ. Ova igra izrađena je u sklopu projekta DigiSTIN." />
     <meta property="og:image" content="og-slika.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@stin" />
+    <meta name="twitter:title" content="Prepoznaj broj napisan glagoljicom" />
+    <meta name="twitter:description" content="Igra u kojoj se igraču prikazuje nasumičan broj u odabranome rasponu brojeva napisan glagoljičnim slovima. Igrač treba prepoznati o kojemu je broju riječ. Ova igra izrađena je u sklopu projekta DigiSTIN." />
+    <meta name="twitter:image" content="og-slika.jpg" />
+
 </head>
 <body>
     <audio class="audios" id="tocno" preload="none">
@@ -81,7 +88,7 @@
     position: relative;
     transition: translate (-50%);
     transform: translateY(-50%);">
-            <h3 class="results-page__info2">Hvala na sudjelovanju u kvizu!</h3><br>
+            <h3 class="results-page__info2">Hvala na sudjelovanju u igri!</h3><br>
             <p class="results-page__info">Odgovorili ste točno na <span class="results-page__score">100%</span> postavljenih pitanja.</p>
             <br>
             <p class="results-page__info">S obzirom na broj točnih odgovora i utrošeno vrijeme ostvarili ste sljedeći broj bodova:
