--- a/kviz-sklonidba-imenica/index.html
+++ b/kviz-sklonidba-imenica/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Glagoljska riječ mjeseca – kviz</title>
+    <title>Kviz iz sklonidbe imenica</title>
     <meta charset="utf-8">
-    <meta name="description" content="Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!">
-    <meta name="keywords" content="kviz, LZMK, Leksikografski zavod Miroslav Krleža, enciklopedije, leksikoni">
+    <meta name="description" content="Dodaj opis za igru">
+    <meta name="keywords" content="STIN, imenice, sklonidba, crkvenoslavenski">
     <meta name="author" content="LZMK">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -19,13 +19,13 @@
     <script src="js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta property="og:title" content="Glagoljska riječ mjeseca – kviz" />
-    <meta property="og:description" content="Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!" />
+    <meta property="og:title" content="Kviz iz sklonidbe imenica" />
+    <meta property="og:description" content="Dodaj opis za igru" />
     <meta property="og:image" content="og-slika.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
-    <meta name="twitter:title" content="Glagoljska riječ mjeseca – kviz" />
-    <meta name="twitter:description" content="Na stranici Staroslavenskoga instituta na Facebooku svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za Rječnik crkvenoslavenskoga jezika hrvatske redakcije, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!" />
+    <meta name="twitter:title" content="Kviz iz sklonidbe imenica" />
+    <meta name="twitter:description" content="Dodaj opis za igru" />
     <meta name="twitter:image" content="og-slika.png" />
 </head>
 
@@ -42,19 +42,26 @@
             <div class="container container2">
                 <div class="modal-overlay">
                     <div class="modal">
-                        <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Glagoljska riječ mjeseca – kviz</h2>
+                        <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Kviz iz sklonidbe imenica</h2>
                         <br>
                         <hr class="style-two">
-                        <div id="uvod"><p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;"><br>Na stranici Staroslavenskoga instituta na <a href="https://www.facebook.com/stin.hr" target="_blank">Facebooku</a> svaki se mjesec objavljuje jedna riječ potvrđena u hrvatskoglagoljičnim tekstovima. Riječi su potvrđene u korpusu za <em>Rječnik crkvenoslavenskoga jezika hrvatske redakcije</em>, što je temeljni projekt Staroslavenskoga instituta. Taj korpus čini više od 60 hrvatskoglagoljičnih izvora iz razdoblja od 11./12. st. do 17. st. Provjerite svoje znanje hrvatskih crkvenoslavenskih riječi!</p>
+                        <div id="uvod"><p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;"><br>Uvodni tekst.</p>
                         <br>
-                        <button class="btn uglata gla" onclick="document.getElementById('uvod').style.display = 'none';document.getElementById('razina').style.display = 'block'">igraj</button></div>
-                        <div id="razina" style="display: none;"> <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;text-align: center;">Odaberi razinu:</p>
-                        <button class="init-page__btn btn uglata" onclick="set_pitanja=1">I. razina</button>
-                        <button class="init-page__btn btn uglata" onclick="set_pitanja=2">II. razina</button>
-                        <button class="init-page__btn btn uglata" onclick="set_pitanja=3">III. razina</button></div>
+                        </div>
+                       <div class="kategorija"> <p class="opis" style="text-align: left; font-size:1.5rem; padding: 10px;text-align: center;">Odaberi rod:</p>
+                        <button class="btn" onclick="set_pitanja=1; $('.sklonidba').show(); $('.muski').show();$('.kategorija').hide()">muški</button>
+                        <button class="btn" onclick="set_pitanja=2; $('.sklonidba').show(); $('.zenski').show();$('.kategorija').hide()">ženski</button>
+                        <button class="btn" onclick="set_pitanja=3; $('.sklonidba').show(); $('.srednji').show(); $('.kategorija').hide();">srednji</button></div>
 
-                        <br>
-                        <p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
+                 
+                        <div class="sklonidba"> <p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;">Odaberi sklonidbu:</p>
+                        <button class="init-page__btn btn muski srednji" onclick="set_pitanja2=1">o-sklonidba</button>
+                        <button class="init-page__btn btn muski srednji" onclick="set_pitanja2=2">jo-sklonidba</button>
+                        <button class="init-page__btn btn zenski" onclick="set_pitanja2=3">a-sklonidba</button>
+                        <button class="init-page__btn btn zenski" onclick="set_pitanja2=4">ja-sklonidba</button>
+                        </div> 
+                        
+                        <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
                     </div>
                 </div>
             </div>
@@ -85,7 +92,7 @@
                 <br>
                 <p class="results-page__info">S obzirom na broj točnih odgovora i vrijeme ostvaren je sljedeći broj bodova:</p>
                 <h3 class="results-page__bodovi"></h3>
-                <p class="results-page__info">Želite naučiti još novih riječi? Pratite nas na Facebooku i svaki mjesec naučite novu riječ!<br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fab fa-facebook-square"></i></a></p>
+                <p class="results-page__info">Isprobajte ostale igre na stranici <a href="stin.hr/igre" target="_blank">Staroslavenskoga instituta.<i class="fa fa-gamepad" aria-hidden="true"></i></a></p>
                 <br>
                 <p>
 
@@ -99,40 +106,6 @@
         crossorigin="anonymous"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/index.js"></script>
-    <script>
-        if (localStorage.getItem("ispunjen4") != null) {
-            $("#bootstrapForm").hide();
-            $(".results-page__retake-btn").show()
-        }
-        $('#bootstrapForm').submit(function (event) {
-            event.preventDefault()
-            var extraData = {}
-            $('#bootstrapForm').ajaxSubmit({
-                data: extraData,
-                dataType: 'jsonp',  // This won't really work. It's just to use a GET instead of a POST to allow cookies from different domain.
-                error: function () {
-                    // Submit of form should be successful but JSONP callback will fail because Google Forms
-                    // does not support it, so this is handled as a failure.
-                    Swal.fire({
-
-                        title: "Kviz su sastavili leksikografi.",
-                        html: "<p style='text-align:center'>Hvala na sudjelovanju!</p>",
-                        showCloseButton: true,
-                        confirmButtonText: ' zatvori',
-                        backdrop: false,
-                        allowOutsideClick: false, allowEscapeKey: false
-                    })
-                    $("#bootstrapForm").hide()
-                    localStorage.setItem("ispunjen4", "ispunjen");
-
-                    $(".results-page__retake-btn").show()
-                    // You can also redirect the user to a custom thank-you page:
-                    // window.location = 'http://www.mydomain.com/thankyoupage.html'
-                }
-
-            })
-        })
-    </script>
     <style>
         form {
             font-size: 2rem;
