--- a/kviz-sklonidba-imenica/index.html
+++ b/kviz-sklonidba-imenica/index.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="Naučite glavne sklonidbe imenica" />
-    <meta property="og:description" content="Kviz je namijenjen za ponavljanje glavnih sklonidba (a-, ja-, o-, jo-) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici Hrvatski crkvenoslavenski jezik." />
+    <meta property="og:description" content="Kviz je namijenjen za ponavljanje glavnih sklonidaba (a-, ja-, o-, jo-) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici Hrvatski crkvenoslavenski jezik." />
     <meta property="og:image" content="og-slika.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
     <meta name="twitter:title" content="Naučite glavne sklonidbe imenica" />
-    <meta name="twitter:description" content="Kviz je namijenjen za ponavljanje glavnih sklonidba (a-, ja-, o-, jo-) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici Hrvatski crkvenoslavenski jezik." />
+    <meta name="twitter:description" content="Kviz je namijenjen za ponavljanje glavnih sklonidaba (a-, ja-, o-, jo-) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici Hrvatski crkvenoslavenski jezik." />
     <meta name="twitter:image" content="og-slika.png" />
 </head>
 
@@ -45,7 +45,7 @@
                         <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Naučite glavne sklonidbe imenica</h2>
                         <br>
                         <hr class="style-two">
-                        <div id="uvod"><p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;">Kviz je namijenjen za ponavljanje glavnih sklonidba (a-, ja-, o-, jo-) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici&nbsp;<em>Hrvatski crkvenoslavenski jezik</em>.</p>
+                        <div id="uvod"><p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;">Kviz je namijenjen za ponavljanje glavnih sklonidaba (<em>a-</em>, <em>ja-</em>, <em>o-</em>, <em>jo-</em>) imenica u hrvatskome crkvenoslavenskom jeziku. Igrač može odabrati koju sklonidbu želi vježbati, a zadatak je odabrati točan traženi oblik navedene riječi. Detaljnije o sklonidbama pogledajte u gramatici&nbsp;<em>Hrvatski crkvenoslavenski jezik</em>.</p>
                             <button class="btn" onclick="$('#uvod').hide(); $('.kategorija').show()">igraj</button>
                         <br>
                         </div>
